--- a/tarefa.css
+++ b/tarefa.css
@@ -196,7 +196,11 @@ section h3 {
     }
 
     .produtos {
+        list-style: none;
+        flex-wrap: wrap;
+        display: grid;
         grid-template-columns: repeat(2, 49%);
+        column-gap: 1%;
     }
 }
 
