--- a/tarefa.css
+++ b/tarefa.css
@@ -124,6 +124,13 @@ section h3 {
     .sobre a {
         font-size: 16px;
     }
+    
+    .botao-menu {
+        display: flex;
+        justify-content: center;
+        margin-top: 16px;
+        padding-bottom: 16px;
+    }
 
     .produtos {
         grid-template-columns: repeat(2, 49.00%)
